# KrienGraphiX

./: .gitignore  CMakeLists.txt  KrienGraphiX.sln  README  conanfile.py
KGToolbox/: CMakeLists.txt
KGToolbox/Source/: KGToolbox.aps  KGToolbox.cpp  KGToolbox.h  KGToolbox.rc  Resource.h
dxc/: CMakeLists.txt
libKrienGraphiX/: CMakeLists.txt  Camera.cpp  Camera.h  ConfigManager.cpp  ConfigManager.h  ConstantBuffer.cpp  ConstantBuffer.h  Defines.h  Filesystem.cpp  Filesystem.h  Geometry.cpp  Geometry.h  IOManager.cpp  IOManager.h  KGXCore.cpp  KGXCore.h  KgParser.cpp  KgParser.h  Light.cpp  Light.h  Material.cpp  Material.h  MeshBuffer.cpp  MovableObject.cpp  MovableObject.h  Object.cpp  Object.h  PhysXManager.cpp  PhysXManager.h  PixelShader.cpp  PixelShader.h  RenderBackend.cpp  RenderBackend.h  RenderBucket.cpp  RenderBucket.h  RenderCommand.cpp  RenderCommand.h  RenderCommandPacket.cpp  RenderCommandPacket.h  RenderCore.cpp  (+32 more)
libKrienGraphiX/Private/Core/: CommandListAllocator.cpp  CommandListAllocator.h  CommandThread.cpp  CommandThread.h  KrienGraphiXEngine.cpp  PrivateDefinitions.h  RcRenderWindow.cpp  RcRenderWindow.h  RenderCore.cpp  RenderCore.h  RenderThread.cpp  RenderThread.h  RenderWindow.cpp  RenderWindow.h  SceneThread.cpp  SceneThread.h  Timer.cpp  Timer.h
libKrienGraphiX/Private/RHI/: PixelFormat.h  RHIBuffer.cpp  RHIBuffer.h  RHICommandQueue.h  RHIConstantBuffer.cpp  RHIConstantBuffer.h  RHIDepthStencilBuffer.h  RHIDescriptors.h  RHIGraphicsCommandList.cpp  RHIGraphicsCommandList.h  RHIGraphicsDevice.h  RHIGraphicsPipelineState.h  RHIPixelFormat.h  RHIResource.cpp  RHIResource.h  RHIResourceView.cpp  RHIResourceView.h  RHIShader.h  RHIShaderProgram.h  RHIShaderResourceView.h  RHISwapChain.h  RHITexture.h  RHITexture2D.h  RHIVertexLayout.h  RHIViewableResource.h  RenderHardwareInterface.h
libKrienGraphiX/Private/RHI/D3D12/: DX12BaseResource.cpp  DX12BaseResource.h  DX12Buffer.cpp  DX12Buffer.h  DX12CommandQueue.cpp  DX12CommandQueue.h  DX12ConstantBuffer.cpp  DX12ConstantBuffer.h  DX12DepthStencilBuffer.cpp  DX12DepthStencilBuffer.h  DX12Descriptors.h  DX12GraphicsCommandList.cpp  DX12GraphicsCommandList.h  DX12GraphicsDevice.cpp  DX12GraphicsDevice.h  DX12GraphicsPipelineState.cpp  DX12GraphicsPipelineState.h  DX12MemoryUtils.cpp  DX12MemoryUtils.h  DX12PixelFormat.cpp  DX12PixelFormat.h  DX12RenderHardwareInterface.cpp  DX12RenderHardwareInterface.h  DX12Resource.cpp  DX12Resource.h  DX12ResourceView.cpp  DX12ResourceView.h  DX12Shader.cpp  DX12Shader.h  DX12ShaderProgram.cpp  DX12ShaderProgram.h  DX12ShaderResourceView.cpp  DX12ShaderResourceView.h  DX12SwapChain.cpp  DX12SwapChain.h  DX12Texture2D.cpp  DX12Texture2D.h  DX12UploadBuffer.cpp  DX12UploadBuffer.h  DX12VertexLayout.cpp  (+3 more)
libKrienGraphiX/Private/RenderMethods/: RenderMethod.h  RenderPass.cpp  RenderPass.h  VolumetricRenderingMethod.cpp  VolumetricRenderingMethod.h
libKrienGraphiX/Private/Rendering/: KGXConstantBuffer.cpp  KGXConstantBuffer.h  KGXDepthStencilBuffer.cpp  KGXDepthStencilBuffer.h  KGXMeshRenderObject.cpp  KGXMeshRenderObject.h  KGXRenderGeometry.cpp  KGXRenderGeometry.h  KGXRenderPass.cpp  KGXRenderPass.h  KGXRenderScene.cpp  KGXRenderScene.h  KGXRenderWindow.cpp  KGXRenderWindow.h  KGXRenderer.cpp  KGXRenderer.h  KGXShaderCache.cpp  KGXShaderCache.h  KGXShaderParameter.cpp  KGXShaderParameter.h  KGXShaderProgram.cpp  KGXShaderProgram.h  RcConstantBuffer.cpp  RcConstantBuffer.h  RcDepthStencilBuffer.cpp  RcDepthStencilBuffer.h  RcShaderParameter.cpp  RcShaderParameter.h  RcShaderProgram.cpp  RcShaderProgram.h
libKrienGraphiX/Private/Scene/: KGXCameraComponent.cpp  KGXMeshComponent.cpp  KGXScene.cpp  KGXScene.h  KGXSceneObject.cpp  KGXSceneObjectComponent.cpp
libKrienGraphiX/Public/KrienGraphiX/Core/: KGXDefinitions.h  KrienGraphiXEngine.h  RenderWindow.h
libKrienGraphiX/Public/KrienGraphiX/Scene/: KGXCameraComponent.h  KGXMeshComponent.h  KGXSceneObject.h  KGXSceneObjectComponent.h
libKrienGraphiX/generators/: KGMaterialLibraryGenerator.cpp  KGMaterialLibraryGenerator.h  KGObjectGenerator.cpp  KGObjectGenerator.h  KGSceneGenerator.cpp  KGSceneGenerator.h
libKrienGraphiX/include/kriengraphix/Core/: CommandList.h  ConfigManager.h  KGXCore.h  LinearAllocator.h  MemoryManager.h  PersistentThread.h  PhysXManager.h  RenderCollection.h  RenderThread.cpp  RenderThread.h  RenderThreadFence.h  RenderWindow.h  SceneThread.h  SceneThreadFence.h  SceneView.h
libKrienGraphiX/include/kriengraphix/IO/: Filesystem.h  KGMaterialLibraryGenerator.h  KGMaterialLibraryParser.h  KGObjectGenerator.h  KGObjectParser.h  KGParserDefines.h  KGSceneParser.h  KGShaderProgramsParser.h
libKrienGraphiX/include/kriengraphix/Rendering/: ConstantBuffer.h  MaterialLibrary.h  MeshBuffer.h  RenderTexture.h  Renderer.h  ShaderProgram.h  (+5 more)
libKrienGraphiX/libraries/: MaterialLibrary.cpp  MaterialLibrary.h  ShaderProgramLibrary.cpp  ShaderProgramLibrary.h  TextureLibrary.cpp  TextureLibrary.h
libKrienGraphiX/parsers/: KGMaterialLibraryParser.cpp  KGMaterialLibraryParser.h  KGObjectParser.cpp  KGObjectParser.h  KGParserDefines.h  KGSceneParser.cpp  KGSceneParser.h  KGShaderProgramsParser.cpp  KGShaderProgramsParser.h  parser_defines.h
libKrienGraphiX/renderpasses/: CompositionPass.cpp  CompositionPass.h  GBufferPass.cpp  GBufferPass.h  RenderPass.cpp  RenderPass.h
libKrienGraphiX/shaders/: DefaultPS.hlsl  DefaultTextureShaderPS.hlsl  DefaultVS.hlsl  DeferredCompositionPS.hlsl  DeferredCompositionVS.hlsl  DeferredGBufferPS.hlsl  DeferredGBufferVS.hlsl  ShaderPrograms.kgsp
libshadercompiler/: CMakeLists.txt
libshadercompiler/Private/: ShaderCompiler.cpp  ShaderCompiler.h  ShaderProgramCompiler.cpp
libshadercompiler/Public/ShaderCompiler/: Serialization.h  ShaderCompiler.h  ShaderProgramCompiler.h
libshadercompiler/Test/: CMakeLists.txt  SerializationTest.cpp
libshadercompiler/Test/Data/: DefaultPS.hlsl
shadercompiler/: CMakeLists.txt
shadercompiler/shaders/: DefaultVS.hlsl
shadercompiler/src/: main.cpp
testapp/: CMakeLists.txt  RcRenderWidget.cpp  RcRenderWidget.h  RenderCoreTestWindow.ui
(+112 files in other folders)
